fixed btn-error, finish how it works, features, member, installation

--- a/index.html
+++ b/index.html
@@ -205,6 +205,225 @@
                     </section>
                 </div>
             </section>
+
+            <!-- How it works -->
+            <section class="work">
+                <div class="container">
+                    <h2 class="section-heading">How it works</h2>
+                    <p class="section-desc work__desc">
+                        Exceptional dental care for all ages. Your great smile
+                        begins with a great dentist.
+                    </p>
+                    <div class="work__list">
+                        <!-- Item 1 -->
+                        <section class="work-item">
+                            <img
+                                src="./assets/icons/search.svg"
+                                alt="Search doctor"
+                                class="work-item__icon"
+                            />
+                            <h3 class="work-item__heading">Search doctor</h3>
+                            <p class="work-item__desc">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="#!" class="work-item__link">Learn More</a>
+                        </section>
+
+                        <!-- Item 2 -->
+                        <section class="work-item">
+                            <img
+                                src="./assets/icons/find-doctor.svg"
+                                alt="Find best doctor"
+                                class="work-item__icon"
+                            />
+                            <h3 class="work-item__heading">Find best doctor</h3>
+                            <p class="work-item__desc">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="#!" class="work-item__link">Learn More</a>
+                        </section>
+
+                        <!-- Item 3 -->
+                        <section class="work-item">
+                            <img
+                                src="./assets/icons/treatment.svg"
+                                alt="Get treatment"
+                                class="work-item__icon"
+                            />
+                            <h3 class="work-item__heading">Get treatment</h3>
+                            <p class="work-item__desc">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="#!" class="work-item__link">Learn More</a>
+                        </section>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Features -->
+            <section class="feature">
+                <div class="container">
+                    <div class="feature__body">
+                        <!-- Media -->
+                        <div class="feature__media">
+                            <img
+                                src="./assets/img/feature-img.jpg"
+                                alt="Take back your smile with shine."
+                                class="feature__images"
+                            />
+                            <img
+                                src="./assets/img/feature-img-small.jpg"
+                                alt="Take back your smile with shine."
+                                class="feature__images--small"
+                            />
+                        </div>
+                        <!-- Content -->
+                        <div class="feature__content">
+                            <h2 class="section-heading">
+                                Take back your smile with shine.
+                            </h2>
+                            <p class="section-desc feature__desc">
+                                If you’re missing multiple teeth due to decay,
+                                injury, or the natural aging process, dentures
+                                might be the perfect solution.
+                            </p>
+                            <a href="#!" class="btn feature__link"
+                                >Learn More</a
+                            >
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Member -->
+            <section class="member">
+                <div class="container">
+                    <!-- Header -->
+                    <header class="member__header">
+                        <h2 class="section-heading member__heading">
+                            Our virtual dentist
+                        </h2>
+
+                        <a href="#!" class="btn member__btn">
+                            Meet our dentist
+                        </a>
+                    </header>
+
+                    <div class="member__list">
+                        <!-- Item 1 -->
+                        <article class="member-item">
+                            <div class="member-item__avatar">
+                                <img
+                                    src="./assets/img/thumb-1.jpg"
+                                    alt=""
+                                    class="member-item__thumb"
+                                />
+                            </div>
+                            <h3 class="member-item__name">Dr. Essence Page</h3>
+                            <p class="member-item__title">
+                                DDS, California - Linda University
+                            </p>
+                        </article>
+
+                        <!-- Item 2 -->
+                        <article class="member-item">
+                            <div class="member-item__avatar">
+                                <img
+                                    src="./assets/img/thumb-2.jpg"
+                                    alt=""
+                                    class="member-item__thumb"
+                                />
+                            </div>
+                            <h3 class="member-item__name">Dr. Essence Page</h3>
+                            <p class="member-item__title">
+                                DDS, California - Linda University
+                            </p>
+                        </article>
+
+                        <!-- Item 3 -->
+                        <article class="member-item">
+                            <div class="member-item__avatar">
+                                <img
+                                    src="./assets/img/thumb-3.jpg"
+                                    alt=""
+                                    class="member-item__thumb"
+                                />
+                            </div>
+                            <h3 class="member-item__name">Dr. Essence Page</h3>
+                            <p class="member-item__title">
+                                DDS, California - Linda University
+                            </p>
+                        </article>
+
+                        <!-- Item 4 -->
+                        <article class="member-item">
+                            <div class="member-item__avatar">
+                                <img
+                                    src="./assets/img/thumb-4.jpg"
+                                    alt=""
+                                    class="member-item__thumb"
+                                />
+                            </div>
+                            <h3 class="member-item__name">Dr. Essence Page</h3>
+                            <p class="member-item__title">
+                                DDS, California - Linda University
+                            </p>
+                        </article>
+                    </div>
+
+                    <!-- Continue -->
+                    <div class="member__next">
+                        <img
+                            src="./assets/icons/continue.svg"
+                            alt=""
+                            class="member__next-btn"
+                        />
+                    </div>
+                </div>
+            </section>
+
+            <!-- Install -->
+            <section class="install">
+                <div class="container">
+                    <div class="install__inner">
+                        <!-- Image -->
+                        <figure>
+                            <img
+                                src="./assets/img/install-img.svg"
+                                alt="Take back your smile with dentures"
+                                class="install__img"
+                            />
+                        </figure>
+
+                        <!-- Content -->
+                        <section class="install__content">
+                            <h2 class="section-heading install__heading">
+                                Take back your smile with dentures
+                            </h2>
+                            <p class="section-desc install__desc">
+                                If you’re missing multiple teeth due to decay,
+                                injury, or the natural aging process, dentures
+                                might be the perfect solution.
+                            </p>
+                            <div class="install__row">
+                                <img
+                                    src="./assets/img/google-play.svg"
+                                    alt="Google Play"
+                                    class="install__google-play__logo"
+                                />
+                                
+                                <img
+                                    src="./assets/img/app-store.svg"
+                                    alt="Apple"
+                                    class="install__app-store__logo"
+                                />
+                        </section>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
