add blog section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
             rel="stylesheet"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,600;1,14..32,600&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- Header -->
@@ -424,6 +427,43 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Blog -->
+             <section class="blog">
+                <div class="container">
+                    <div class="blog__inner">
+                        <!-- Left -->
+                        <section class="blog__left">
+                            <h2 class="section-heading blog__heading">Read Latest News & Events.</h2>
+                            <a href="#!" class="blog__more-info">Read All Blog</a>
+                            <img src="./assets/icons/continue.svg" alt="" class="blog__next-btn">
+                        </section>
+
+                        <!-- Right -->
+                        <div class="blog__right">
+                            <!-- Item 1 -->
+                            <article class="blog__item">
+                                <img src="./assets/img/vaccine-1.jpg" alt="Key Considerations for Regulatory Compliant." class="blog__item__img">
+                                <div class="blog__item__body">
+                                    <h3 class="blog__item__heading">Key Considerations for Regulatory Compliant.</h3>
+                                    <p class="blog__item__desc">It’s easy to think about medical care from a narrow perspective. You go to the hospital.</p>
+                                    <a href="#!" class="blog__item__link">Learn More</a>
+                                </div>
+                            </article>
+
+                            <!-- Item 2 -->
+                            <article class="blog__item">
+                                <img src="./assets/img/vaccine-2.jpg" alt="What Is Population Health Management?" class="blog__item__img">
+                                <div class="blog__item__body">
+                                    <h3 class="blog__item__heading">What Is Population Health Management?</h3>
+                                    <p class="blog__item__desc">It’s easy to think about medical care from a narrow perspective. You go to the hospital.</p>
+                                    <a href="#!" class="blog__item__link">Learn More</a>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+             </section>
         </main>
     </body>
 </html>
