--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <!-- Header-top -->
                 <div class="header-top">
                     <!-- Logo -->
-                    <a href="/">
+                    <a href="">
                         <div class="logo">
                             <span class="logo__circle"></span>
                             <div class="logo__text">
