--- a/index.html
+++ b/index.html
@@ -27,6 +27,26 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,600;1,14..32,600&display=swap" rel="stylesheet">
+
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="./assets/favicon/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+        <link rel="manifest" href="./assets/favicon/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
+
     </head>
     <body>
         <!-- Header -->
@@ -35,7 +55,7 @@
                 <!-- Header-top -->
                 <div class="header-top">
                     <!-- Logo -->
-                    <a href="">
+                    <a href="#!">
                         <div class="logo">
                             <span class="logo__circle"></span>
                             <div class="logo__text">
@@ -464,6 +484,99 @@
                     </div>
                 </div>
              </section>
+
+             <!-- Appointment -->
+              <section class="appointment">
+                <div class="container">
+                    <div class="appointment__inner">
+                        <h2 class="section-heading appointment__heading">Always welcoming new patients</h2>
+                        <p class="appointment__desc section-desc">Take control of your dental health and get the personalized care you deserve. Call (541) 772-8846 to  schedule</p>
+                        <div class="appointment__cta">
+                            <a href="#!" class="btn appointment__btn">
+                                Appointment
+                            </a>
+                        </div>
+                        
+                    </div>
+                </div>
+              </section>
+
         </main>
+
+         <!-- Footer -->
+          <footer class="footer">
+            <div class="container">
+                <div class="footer__row">
+                    <!-- Column 1 -->
+                    <div class="footer__column">
+                        <!-- Logo -->
+                        <a href="#!">
+                            <div class="logo">
+                                <span class="logo__circle"></span>
+                                <div class="logo__text">
+                                    <span class="logo__brand">shine</span>
+                                    <span class="logo_brand--small">smile</span>
+                                </div>
+                            </div>
+                        </a>
+
+                        <p class="footer__desc">Exceptional dental care for all ages. Your great smile begins with a great dentist.</p>
+                    </div>
+
+                    <!-- Column 2 -->
+                     <div class="footer__column">
+                        <h3 class="footer__heading">Support</h3>
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#!" class="footer__link">Help center</a></li>
+                            <li class="footer__item"><a href="#!" class="footer__link">Account information</a></li>
+                            <li class="footer__item"><a href="#!" class="footer__link">About</a></li>
+                            <li class="footer__item"><a href="#!" class="footer__link">Contact us</a></li>
+                        </ul>
+
+                        <h3 class="footer__heading">Support</h3>
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#!" class="footer__link">Help center</a></li>
+                            <li class="footer__item"><a href="#!" class="footer__link">Account information</a></li>
+                        </ul>
+                     </div>
+
+                     <!-- Column 3 -->
+                     <div class="footer__column">
+                        <h3 class="footer__heading">Support</h3>
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#!" class="footer__link">Help center</a></li>
+                            <li class="footer__item"><a href="#!" class="footer__link">Account information</a></li>
+                        </ul>
+
+                        <h3 class="footer__heading">Support</h3>
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#!" class="footer__link">Help center</a></li>
+                        </ul>
+                     </div>
+
+                     <!-- Column 4 -->
+                      <div class="footer__column">
+                        <h3 class="footer__heading">Stay In Touch</h3>
+                        <div class="footer__social">
+                            <img src="./assets/icons/footer-social.svg" alt="" class="footer__icons">
+                        </div>
+
+                        <h3 class="footer__heading">Subscribe</h3>
+                        <p class="footer__desc--small">Subscribe our newsletter for the latest update of Dental care</p>
+
+                        <form action="" class="footer-form">
+                            <input type="email" id="email"  placeholder="Enter your email..." class="footer-form__input">
+                            <button type="submit" class="btn footer-form__submit">Subscribe</button>
+                        </form>
+                      </div>
+                </div>
+
+                <hr class="footer__separate">
+
+                <div class="footer__copyright">
+                    <p class="footer__copyright-text">2021 GDN. Copyright and All rights reserved.</p>
+                </div>
+            </div>
+          </footer>
     </body>
 </html>
